--- a/assets/vars.css
+++ b/assets/vars.css
@@ -1,10 +1,10 @@
 :root {
-    --name: iNeoony;
+    --name: quxng;
     --text-color: #fff;
     --back-color: #fff3;
     --over-color: #fefefe;
     --popup-text-color: #000000;
     --border: none;
-    --pasxalka: https://www.t.me/iNeoonyNews;
+    --pasxalka: https://t.me/quxngcreations;
     --has-pasxalka-work: 'true';
 }
